prevent caelndar preview overflow on mobile

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -198,6 +198,7 @@
 				  display: block; // align horizontal
 				  margin-right: auto;
 				  margin-left: auto;
+          overflow: hidden;
 
 				  .inner {
 				    height: 100%;
